// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NativeSelectWidget select field multiple choice 1`] = `
<DocumentFragment>
  @layer recipes {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
  }

  .emotion-0>:not(style, [hidden])~:not(style, [hidden]) {
    --space-y-reverse: 0;
    margin-top: calc(var(--chakra-spacing-4) * calc(1 - var(--space-y-reverse)));
    margin-bottom: calc(var(--chakra-spacing-4) * var(--space-y-reverse));
  }
}

@layer recipes {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
    gap: var(--chakra-spacing-4);
  }
}

.emotion-2 {
  margin-bottom: var(--chakra-spacing-1);
}

@layer recipes {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    gap: var(--chakra-spacing-1\\.5);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@layer recipes {
  .emotion-3 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    --select-field-height: var(--chakra-sizes-10);
  }
}

@layer recipes {
  .emotion-4 {
    width: 100%;
    min-width: 0;
    outline: 0;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    border-radius: var(--chakra-radii-l2);
    --error-color: var(--chakra-colors-border-error);
    --input-height: var(--select-field-height);
    height: var(--select-field-height);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    line-height: 1.25rem;
    font-size: var(--chakra-font-sizes-sm);
    -webkit-padding-start: var(--chakra-spacing-3);
    padding-inline-start: var(--chakra-spacing-3);
    -webkit-padding-end: var(--chakra-spacing-8);
    padding-inline-end: var(--chakra-spacing-8);
    background: var(--chakra-colors-transparent);
    --bg-currentcolor: var(--chakra-colors-transparent);
    border-width: 1px;
    border-color: var(--chakra-colors-border);
  }

  .emotion-4:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-4:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    --focus-ring-color: var(--error-color);
    border-color: var(--error-color);
  }

  .emotion-4:is(:focus-visible, [data-focus-visible]) {
    outline-offset: 0px;
    outline-width: var(--focus-ring-width, 1px);
    outline-color: var(--focus-ring-color);
    outline-style: var(--focus-ring-style, solid);
    border-color: var(--focus-ring-color);
  }

  .emotion-4>option,
  .emotion-4>optgroup {
    background: var(--chakra-colors-bg);
    --bg-currentcolor: var(--chakra-colors-bg);
  }

  .emotion-4:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    border-color: var(--chakra-colors-border-emphasized);
  }
}

@layer recipes {
  .emotion-5 {
    position: absolute;
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    pointer-events: none;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    height: 100%;
    color: var(--chakra-colors-fg-muted);
    font-size: var(--chakra-font-sizes-lg);
    line-height: 1.75rem;
    inset-inline-end: var(--chakra-spacing-2);
  }

  .emotion-5:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
  }

  .emotion-5:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    color: var(--chakra-colors-fg-error);
  }

  .emotion-5 :where(svg) {
    width: 1em;
    height: 1em;
  }
}

.emotion-6 {
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.emotion-7 {
  margin-top: var(--chakra-spacing-3);
}

@layer recipes {
  .emotion-8 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    position: relative;
    border-radius: var(--chakra-radii-l2);
    white-space: nowrap;
    vertical-align: middle;
    border-width: 1px;
    border-color: var(--chakra-colors-transparent);
    cursor: var(--chakra-cursor-button);
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    outline: 0;
    line-height: 1.25rem;
    isolation: isolate;
    font-weight: var(--chakra-font-weights-medium);
    transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,translate,transform;
    transition-duration: var(--chakra-durations-moderate);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    height: var(--chakra-sizes-10);
    min-width: var(--chakra-sizes-10);
    font-size: var(--chakra-font-sizes-sm);
    padding-inline: var(--chakra-spacing-4);
    gap: var(--chakra-spacing-2);
    background: var(--chakra-colors-color-palette-solid);
    --bg-currentcolor: var(--chakra-colors-color-palette-solid);
    color: var(--chakra-colors-color-palette-contrast);
  }

  .emotion-8:is(:focus-visible, [data-focus-visible]) {
    outline-width: var(--focus-ring-width, 2px);
    outline-offset: var(--focus-ring-offset, 2px);
    outline-style: var(--focus-ring-style, solid);
    outline-color: var(--focus-ring-color);
  }

  .emotion-8:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-8 :where(svg) {
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    width: var(--chakra-sizes-5);
    height: var(--chakra-sizes-5);
  }

  .emotion-8:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
    background: var(--mix-background, var(--chakra-colors-color-palette-solid));
    --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
  }

  @media (hover: hover) {
    .emotion-8:is(:hover, [data-hover]):not(:disabled, [data-disabled]) {
      --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
      background: var(--mix-background, var(--chakra-colors-color-palette-solid));
      --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
    }
  }
}

<form
    class="rjsf"
  >
    <div
      class="rjsf-field rjsf-field-array"
    >
      <fieldset
        aria-labelledby="fieldset:::r3:::legend"
        class="fieldset__root emotion-0"
        data-part="root"
        data-scope="fieldset"
      >
        <div
          class="fieldset__content emotion-1"
        >
          <div
            class="chakra-field__root emotion-2"
            data-part="root"
            data-scope="field"
            id="field:::r4:"
            role="group"
          >
            <div
              class="chakra-native-select__root emotion-3"
            >
              <select
                aria-describedby="root__error root__description root__help"
                class="chakra-native-select__field emotion-4"
                data-part="select"
                data-scope="field"
                id="root"
              >
                <option
                  value="0"
                >
                  foo
                </option>
                <option
                  value="1"
                >
                  bar
                </option>
                <option
                  value="2"
                >
                  fuzz
                </option>
                <option
                  value="3"
                >
                  qux
                </option>
              </select>
              <div
                class="chakra-native-select__indicator emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="emotion-7"
    >
      <button
        class="chakra-button emotion-8"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
  <span
    hidden=""
  />
</DocumentFragment>
`;

exports[`NativeSelectWidget select field multiple choice with labels 1`] = `
<DocumentFragment>
  @layer recipes {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
  }

  .emotion-0>:not(style, [hidden])~:not(style, [hidden]) {
    --space-y-reverse: 0;
    margin-top: calc(var(--chakra-spacing-4) * calc(1 - var(--space-y-reverse)));
    margin-bottom: calc(var(--chakra-spacing-4) * var(--space-y-reverse));
  }
}

@layer recipes {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
    gap: var(--chakra-spacing-4);
  }
}

.emotion-2 {
  margin-bottom: var(--chakra-spacing-1);
}

@layer recipes {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    gap: var(--chakra-spacing-1\\.5);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@layer recipes {
  .emotion-3 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    --select-field-height: var(--chakra-sizes-10);
  }
}

@layer recipes {
  .emotion-4 {
    width: 100%;
    min-width: 0;
    outline: 0;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    border-radius: var(--chakra-radii-l2);
    --error-color: var(--chakra-colors-border-error);
    --input-height: var(--select-field-height);
    height: var(--select-field-height);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    line-height: 1.25rem;
    font-size: var(--chakra-font-sizes-sm);
    -webkit-padding-start: var(--chakra-spacing-3);
    padding-inline-start: var(--chakra-spacing-3);
    -webkit-padding-end: var(--chakra-spacing-8);
    padding-inline-end: var(--chakra-spacing-8);
    background: var(--chakra-colors-transparent);
    --bg-currentcolor: var(--chakra-colors-transparent);
    border-width: 1px;
    border-color: var(--chakra-colors-border);
  }

  .emotion-4:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-4:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    --focus-ring-color: var(--error-color);
    border-color: var(--error-color);
  }

  .emotion-4:is(:focus-visible, [data-focus-visible]) {
    outline-offset: 0px;
    outline-width: var(--focus-ring-width, 1px);
    outline-color: var(--focus-ring-color);
    outline-style: var(--focus-ring-style, solid);
    border-color: var(--focus-ring-color);
  }

  .emotion-4>option,
  .emotion-4>optgroup {
    background: var(--chakra-colors-bg);
    --bg-currentcolor: var(--chakra-colors-bg);
  }

  .emotion-4:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    border-color: var(--chakra-colors-border-emphasized);
  }
}

@layer recipes {
  .emotion-5 {
    position: absolute;
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    pointer-events: none;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    height: 100%;
    color: var(--chakra-colors-fg-muted);
    font-size: var(--chakra-font-sizes-lg);
    line-height: 1.75rem;
    inset-inline-end: var(--chakra-spacing-2);
  }

  .emotion-5:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
  }

  .emotion-5:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    color: var(--chakra-colors-fg-error);
  }

  .emotion-5 :where(svg) {
    width: 1em;
    height: 1em;
  }
}

.emotion-6 {
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.emotion-7 {
  margin-top: var(--chakra-spacing-3);
}

@layer recipes {
  .emotion-8 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    position: relative;
    border-radius: var(--chakra-radii-l2);
    white-space: nowrap;
    vertical-align: middle;
    border-width: 1px;
    border-color: var(--chakra-colors-transparent);
    cursor: var(--chakra-cursor-button);
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    outline: 0;
    line-height: 1.25rem;
    isolation: isolate;
    font-weight: var(--chakra-font-weights-medium);
    transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,translate,transform;
    transition-duration: var(--chakra-durations-moderate);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    height: var(--chakra-sizes-10);
    min-width: var(--chakra-sizes-10);
    font-size: var(--chakra-font-sizes-sm);
    padding-inline: var(--chakra-spacing-4);
    gap: var(--chakra-spacing-2);
    background: var(--chakra-colors-color-palette-solid);
    --bg-currentcolor: var(--chakra-colors-color-palette-solid);
    color: var(--chakra-colors-color-palette-contrast);
  }

  .emotion-8:is(:focus-visible, [data-focus-visible]) {
    outline-width: var(--focus-ring-width, 2px);
    outline-offset: var(--focus-ring-offset, 2px);
    outline-style: var(--focus-ring-style, solid);
    outline-color: var(--focus-ring-color);
  }

  .emotion-8:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-8 :where(svg) {
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    width: var(--chakra-sizes-5);
    height: var(--chakra-sizes-5);
  }

  .emotion-8:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
    background: var(--mix-background, var(--chakra-colors-color-palette-solid));
    --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
  }

  @media (hover: hover) {
    .emotion-8:is(:hover, [data-hover]):not(:disabled, [data-disabled]) {
      --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
      background: var(--mix-background, var(--chakra-colors-color-palette-solid));
      --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
    }
  }
}

<form
    class="rjsf"
  >
    <div
      class="rjsf-field rjsf-field-array"
    >
      <fieldset
        aria-labelledby="fieldset:::r5:::legend"
        class="fieldset__root emotion-0"
        data-part="root"
        data-scope="fieldset"
      >
        <div
          class="fieldset__content emotion-1"
        >
          <div
            class="chakra-field__root emotion-2"
            data-part="root"
            data-scope="field"
            id="field:::r6:"
            role="group"
          >
            <div
              class="chakra-native-select__root emotion-3"
            >
              <select
                aria-describedby="root__error root__description root__help"
                class="chakra-native-select__field emotion-4"
                data-part="select"
                data-scope="field"
                id="root"
              >
                <option
                  value="0"
                >
                  Blue
                </option>
                <option
                  value="1"
                >
                  Red
                </option>
                <option
                  value="2"
                >
                  Green
                </option>
              </select>
              <div
                class="chakra-native-select__indicator emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="emotion-7"
    >
      <button
        class="chakra-button emotion-8"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
  <span
    hidden=""
  />
</DocumentFragment>
`;

exports[`NativeSelectWidget select field with enum 1`] = `
<DocumentFragment>
  @layer recipes {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
  }

  .emotion-0>:not(style, [hidden])~:not(style, [hidden]) {
    --space-y-reverse: 0;
    margin-top: calc(var(--chakra-spacing-4) * calc(1 - var(--space-y-reverse)));
    margin-bottom: calc(var(--chakra-spacing-4) * var(--space-y-reverse));
  }
}

@layer recipes {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    width: var(--chakra-sizes-full);
    gap: var(--chakra-spacing-4);
  }
}

.emotion-2 {
  display: grid;
  gap: var(--chakra-spacing-4);
  margin-bottom: var(--chakra-spacing-4);
}

.emotion-5 {
  margin-bottom: var(--chakra-spacing-1);
}

@layer recipes {
  .emotion-5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    gap: var(--chakra-spacing-1\\.5);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@layer recipes {
  .emotion-6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: start;
    font-size: var(--chakra-font-sizes-sm);
    line-height: 1.25rem;
    font-weight: var(--chakra-font-weights-medium);
    gap: var(--chakra-spacing-1);
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

  .emotion-6:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
  }
}

@layer recipes {
  .emotion-7 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    position: relative;
    --select-field-height: var(--chakra-sizes-10);
  }
}

@layer recipes {
  .emotion-8 {
    width: 100%;
    min-width: 0;
    outline: 0;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    border-radius: var(--chakra-radii-l2);
    --error-color: var(--chakra-colors-border-error);
    --input-height: var(--select-field-height);
    height: var(--select-field-height);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    line-height: 1.25rem;
    font-size: var(--chakra-font-sizes-sm);
    -webkit-padding-start: var(--chakra-spacing-3);
    padding-inline-start: var(--chakra-spacing-3);
    -webkit-padding-end: var(--chakra-spacing-8);
    padding-inline-end: var(--chakra-spacing-8);
    background: var(--chakra-colors-transparent);
    --bg-currentcolor: var(--chakra-colors-transparent);
    border-width: 1px;
    border-color: var(--chakra-colors-border);
  }

  .emotion-8:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-8:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    --focus-ring-color: var(--error-color);
    border-color: var(--error-color);
  }

  .emotion-8:is(:focus-visible, [data-focus-visible]) {
    outline-offset: 0px;
    outline-width: var(--focus-ring-width, 1px);
    outline-color: var(--focus-ring-color);
    outline-style: var(--focus-ring-style, solid);
    border-color: var(--focus-ring-color);
  }

  .emotion-8>option,
  .emotion-8>optgroup {
    background: var(--chakra-colors-bg);
    --bg-currentcolor: var(--chakra-colors-bg);
  }

  .emotion-8:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    border-color: var(--chakra-colors-border-emphasized);
  }
}

@layer recipes {
  .emotion-9 {
    position: absolute;
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    pointer-events: none;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    height: 100%;
    color: var(--chakra-colors-fg-muted);
    font-size: var(--chakra-font-sizes-lg);
    line-height: 1.75rem;
    inset-inline-end: var(--chakra-spacing-2);
  }

  .emotion-9:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
  }

  .emotion-9:is([data-invalid], [aria-invalid=true], [data-state=invalid]) {
    color: var(--chakra-colors-fg-error);
  }

  .emotion-9 :where(svg) {
    width: 1em;
    height: 1em;
  }
}

.emotion-10 {
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.emotion-11 {
  margin-top: var(--chakra-spacing-3);
}

@layer recipes {
  .emotion-12 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    position: relative;
    border-radius: var(--chakra-radii-l2);
    white-space: nowrap;
    vertical-align: middle;
    border-width: 1px;
    border-color: var(--chakra-colors-transparent);
    cursor: var(--chakra-cursor-button);
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    outline: 0;
    line-height: 1.25rem;
    isolation: isolate;
    font-weight: var(--chakra-font-weights-medium);
    transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,translate,transform;
    transition-duration: var(--chakra-durations-moderate);
    --focus-ring-color: var(--chakra-colors-color-palette-focus-ring);
    height: var(--chakra-sizes-10);
    min-width: var(--chakra-sizes-10);
    font-size: var(--chakra-font-sizes-sm);
    padding-inline: var(--chakra-spacing-4);
    gap: var(--chakra-spacing-2);
    background: var(--chakra-colors-color-palette-solid);
    --bg-currentcolor: var(--chakra-colors-color-palette-solid);
    color: var(--chakra-colors-color-palette-contrast);
  }

  .emotion-12:is(:focus-visible, [data-focus-visible]) {
    outline-width: var(--focus-ring-width, 2px);
    outline-offset: var(--focus-ring-offset, 2px);
    outline-style: var(--focus-ring-style, solid);
    outline-color: var(--focus-ring-color);
  }

  .emotion-12:is(:disabled, [disabled], [data-disabled], [aria-disabled=true]) {
    opacity: 0.5;
    cursor: not-allowed;
  }

  .emotion-12 :where(svg) {
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    width: var(--chakra-sizes-5);
    height: var(--chakra-sizes-5);
  }

  .emotion-12:is([aria-expanded=true], [data-expanded], [data-state=expanded]) {
    --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
    background: var(--mix-background, var(--chakra-colors-color-palette-solid));
    --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
  }

  @media (hover: hover) {
    .emotion-12:is(:hover, [data-hover]):not(:disabled, [data-disabled]) {
      --mix-background: color-mix(in srgb, var(--chakra-colors-color-palette-solid) 90%, transparent);
      background: var(--mix-background, var(--chakra-colors-color-palette-solid));
      --bg-currentcolor: var(--mix-background, var(--chakra-colors-color-palette-solid));
    }
  }
}

<form
    class="rjsf"
  >
    <div
      class="rjsf-field rjsf-field-object"
    >
      <fieldset
        aria-labelledby="fieldset:::r0:::legend"
        class="fieldset__root emotion-0"
        data-part="root"
        data-scope="fieldset"
      >
        <div
          class="fieldset__content emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div>
              <div
                class="rjsf-field rjsf-field-string"
              >
                <fieldset
                  aria-labelledby="fieldset:::r1:::legend"
                  class="fieldset__root emotion-0"
                  data-part="root"
                  data-scope="fieldset"
                >
                  <div
                    class="fieldset__content emotion-1"
                  >
                    <div
                      class="chakra-field__root emotion-5"
                      data-part="root"
                      data-scope="field"
                      id="field:::r2:"
                      role="group"
                    >
                      <label
                        class="chakra-field__label emotion-6"
                        data-part="label"
                        data-scope="field"
                        for=":r2:"
                        id="field:::r2:::label"
                      >
                        color
                      </label>
                      <div
                        class="chakra-native-select__root emotion-7"
                      >
                        <select
                          aria-describedby="root_color__error root_color__description root_color__help"
                          class="chakra-native-select__field emotion-8"
                          data-part="select"
                          data-scope="field"
                          id="root_color"
                        >
                          <option
                            disabled=""
                            hidden=""
                            value=""
                          >
                            Pick something
                          </option>
                          <option
                            value="0"
                          >
                            red
                          </option>
                          <option
                            value="1"
                          >
                            green
                          </option>
                          <option
                            value="2"
                          >
                            blue
                          </option>
                        </select>
                        <div
                          class="chakra-native-select__indicator emotion-9"
                        >
                          <svg
                            class="emotion-10"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="emotion-11"
    >
      <button
        class="chakra-button emotion-12"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
  <span
    hidden=""
  />
</DocumentFragment>
`;
